<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>loon_e_motor</name>
  <version>0.2.0</version>
  <description>Motor control package for Loon-E</description>
  <maintainer email="50027005+TheFujirose@users.noreply.github.com">admin</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>RGi</exec_depend>
  <exec_depend>time</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
